# icommunication

./: .gitmodules  README.md  settings.gradle
gradle/: module.gradle
gradle/wrapper/: gradle-wrapper.properties
libimobiledevice/: build.gradle
libimobiledevice/src/main/cpp/: CMakeLists.txt
libimobiledevice/src/main/cpp/src/: device_permission.c  device_permission.h  ideviceinfo.c  ideviceinfo.h  ideviceinstaller.c  ideviceinstaller.h  native-lib.c
libimobiledevice/src/main/kotlin/com/dimkasark/: DeviceCommunicationApi.kt  MobileDeviceApi.kt  UsbCommandProcessor.kt
libimobiledevice/src/main/kotlin/com/dimkasark/models/: PermissionCheckResult.kt
libimobiledevice/src/main/kotlin/com/dimkasark/usbmux/: UsbMuxDaemon.kt
libimobiledevice/src/main/kotlin/com/dimkasark/utils/: DeviceInfoParser.kt  PlistUtils.kt
service_api/: build.gradle
service_app/: build.gradle
service_app/src/main/: AndroidManifest.xml
service_app/src/main/res/values/: strings.xml
service_impl/: build.gradle
service_impl/src/main/: AndroidManifest.xml
service_impl/src/main/kotlin/com/dimkasark/icommunication/: UsbCommunicationReceiver.kt  UsbCommunicationService.kt
